--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dependencies": {
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-draggable": "^4.4.5",
         "webextension-polyfill": "^0.10.0"
     }
 }
